ingress_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressapp1
  namespace: ingress-demo
  labels:
    app: ingressapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingressapp1
  template:
    metadata:
      labels:
        app: ingressapp1
    spec:
      containers:
      - name: ingressapp1
        image: f5devcentral/f5-hello-world:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      securityContext:
        runAsUser: 0
 

---

kind: Service
apiVersion: v1
metadata:
  name: ingressapp1-service
  namespace: ingress-demo
spec:
  selector:
    app: ingressapp1
  ports:
  - protocol: TCP
    port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressapp2
  namespace: ingress-demo
  labels:
    app: ingressapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingressapp2
  template:
    metadata:
      labels:
        app: ingressapp2
    spec:
      containers:
      - name: ingressapp2
        image: gkor75/dvwa:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      securityContext:
        runAsUser: 0   
---

kind: Service
apiVersion: v1
metadata:
  name: ingressapp2-service
  namespace: ingress-demo
spec:
  selector:
    app: ingressapp2
  ports:
  - protocol: TCP
    port: 80
