port_80_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${AppName}
  namespace: ${Namespace}
  labels:
    app: ${AppName}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${AppName}
  template:
    metadata:
      labels:
        app: ${AppName}
    spec:
      containers:
      - name: ${AppName}
        image: gkor75/${AppName}:1.0
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent

---

kind: Service
apiVersion: v1
metadata:
  name: ${AppName}-service
  namespace: ${Namespace}
spec:
  selector:
    app: ${AppName}
  ports:
  - protocol: TCP
    port: 80
