simple_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapp
  namespace: default
  labels:
    app: simpleapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
      - name: simpleapp
        image: chen23/f5-demo-app:latest
        ports:
        - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: simpleapp-service
  namespace: default
spec:
  selector:
    app: simpleapp
  ports:
  - protocol: TCP
    port: 80
