ingress_app_simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressapp1
  namespace: default
  labels:
    app: ingressapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingressapp1
  template:
    metadata:
      labels:
        app: ingressapp1
    spec:
      containers:
      - name: ingressapp1
        image: f5devcentral/f5-hello-world:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080

---

kind: Service
apiVersion: v1
metadata:
  name: ingressapp1-service
  namespace: default
spec:
  selector:
    app: ingressapp1
  ports:
  - protocol: TCP
    port: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingressapp2
  namespace: default
  labels:
    app: ingressapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingressapp2
  template:
    metadata:
      labels:
        app: ingressapp2
    spec:
      containers:
      - name: ingressapp2
        image: gkor75/dvwa:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80

---

kind: Service
apiVersion: v1
metadata:
  name: ingressapp2-service
  namespace: default
spec:
  selector:
    app: ingressapp2
  ports:
  - protocol: TCP
    port: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressapp
  namespace: default
  annotations:
  # See the k8s-bigip-ctlr documentation for information about
  # all Ingress Annotations
  # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-ingress-annotations
    virtual-server.f5.com/ip: "10.1.10.12"
    virtual-server.f5.com/partition: "kubernetes"
    virtual-server.f5.com/balance: "least-connections-node"
    virtual-server.f5.com/health: |
      [
        {
          "path":     "app1.f5demo.com/",
          "send":     "GET / HTTP/1.1\\r\\nHost: app1.f5demo.com\\r\\n\\r\\n",
          "interval": 5,
          "timeout":  16
        }, {
          "path":     "app2.f5demo.com/",
          "send":     "GET / HTTP/1.1\\r\\nHost: app2.f5demo.com\\r\\n\\r\\n",
          "interval": 3,
          "timeout":  10
        }
      ]

spec:
  rules:
  - host: app1.f5demo.com
    http:
      paths:
      - paths:
        backend:
          serviceName: ingressapp1-service
          servicePort: 8080
  - host: app2.f5demo.com
    http:
      paths:
      - paths:
        backend:
          serviceName: ingressapp2-service
          servicePort: 80
