ingress_simple.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-simple
  namespace: default
  annotations:
  # See the k8s-bigip-ctlr documentation for information about
  # all Ingress Annotations
  # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-ingress-annotations
    virtual-server.f5.com/ip: "10.1.10.12"
    virtual-server.f5.com/partition: "kubernetes"
    virtual-server.f5.com/balance: "least-connections-node"
    virtual-server.f5.com/health: |
      [
        {
          "path":     "app1.f5demo.com/",
          "send":     "GET / HTTP/1.1\\r\\nHost: app1.f5demo.com\\r\\n\\r\\n",
          "interval": 5,
          "timeout":  16
        }, {
          "path":     "app2.f5demo.com/",
          "send":     "GET / HTTP/1.1\\r\\nHost: app2.f5demo.com\\r\\n\\r\\n",
          "interval": 3,
          "timeout":  10
        }
      ]

spec:
  rules:
  - host: app1.f5demo.com
    http:
      paths:
      - paths:
        backend:
          serviceName: ingressapp1-service
          servicePort: 8080
  - host: app2.f5demo.com
    http:
      paths:
      - paths:
        backend:
          serviceName: ingressapp2-service
          servicePort: 80
