route_tls_term2.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    virtual-server.f5.com/balance: least-connections-member
    virtual-server.f5.com/health: |
      [
        {
          "path": "app2.apps.f5demo.com/",
          "send": "GET / HTTP/1.1\\r\\nHost: app2.apps.f5demo.com\\r\\n\\r\\n",
          "interval": 5,
          "timeout": 10
        }
      ]
    virtual-server.f5.com/waf: /Common/app1_Generic_Rapid_Policy_LAMP_with_blocking
  labels:
    f5type: bigipa
  name: routeapp2
  namespace: route-demo
spec:
  host: app2.apps.f5demo.com
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: routeapp2-service
    weight: 100
  wildcardPolicy: None
